# rust-api

./: .env  Cargo.toml
migrations/2024-03-19-021939_category/: down.sql  up.sql
migrations/2024-03-19-022322_brand/: down.sql  up.sql
migrations/2024-03-19-022734_product/: down.sql  up.sql
migrations/2024-03-19-023122_user/: down.sql  up.sql
migrations/2024-03-19-023126_comment/: up.sql
migrations/2024-03-19-025225_feedback/: down.sql  up.sql
migrations/2024-06-16-144206_categories_related/: down.sql  up.sql
migrations/2024-09-27-225935_product_categories/: down.sql  up.sql
src/: args.rs  main.rs  models.rs  schema.rs
src/utils/: constants.rs  cryptography.rs  mod.rs  response.rs  utf8_json.rs
src/utils/args/: args.rs  commands.rs  mod.rs
src/utils/args/sub_commands/: brand_commands.rs  category_commands.rs  comment_commands.rs  mod.rs  product_commands.rs  user_commands.rs
src/utils/auth/: handlers.rs  jwt.rs  mod.rs  models.rs  services.rs
src/utils/models/: brand.rs  category.rs  comment.rs  feed_back.rs  feed_back_type.rs  grade.rs  mod.rs  product.rs  product_categories.rs
src/utils/models/user/: role.rs  user.rs
src/utils/ops/: brand_ops.rs  category_ops.rs  comment_ops.rs  mod.rs  product_ops.rs  user_ops.rs
src/utils/routers/: brand.rs  category.rs  comment.rs  mod.rs  product.rs  routes.rs
