[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

rocket = {version = "0.5.0", features = ["json"]}
diesel = {version = "2.1.4", features = ["postgres", "chrono"]}

clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }

log = "0.4.20"
jsonwebtoken = "9.3.0"
