[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

axum = "0.7.5"
diesel = {version = "2.1.4", features = ["postgres", "uuid", "chrono"]}
tokio = { version = "1", features = ["full"] }

uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "serde"]}
data-encoding = "2.6.0"

clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }

log = "0.4.20"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
tower-http = { version = "0.5.2", features = ["cors"] }
env_logger = "0.11.5"

[dev-dependencies]
env_logger = "0.11.5"
